introduced PossibleZipBombException (extends IOException), will now fail fast when a possible zip bomb is found